fix Scheduler, + execute each minute